examples/test/testpolicy17433.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17433
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key46: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value30
          key36: value23
      podSelector:
        matchLabels:
          key49: value21
          key15: value27
